ik heb goed in header fout in main goed in footer

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 </head>
 <body>
 
-    <header><h1></h1></header>
+    <header>goed 
+
+    </header>
 
     <main>
-            <h1></h1>
+            fout
     </main>
 
-    <footer><h1></h1></footer>
+    <footer>
+        goed
+
+    </footer>
     
 </body>
 </html>
