versie 2 met beoordelingen

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
 
-    <header><h1></h1></header>
+    <header>
+        fout
+    </header>
 
     <main>
-            <h1></h1>
+            goed
     </main>
 
-    <footer><h1></h1></footer>
+    <footer>
+ook dit is goed
+    </footer>
     
 </body>
 </html>
